2008-04-15  Oliver Hunt  <oliver@apple.com>

        Reviewed by Maciej.

        Bug 18436: Need to throw exception on read/modify/write or similar resolve for nonexistent property
        <https://bugs.webkit.org/show_bug.cgi?id=18436>

        Add op_resolve_base_and_property for read/modify/write operations,
        this adds a "superinstruction" to resolve the base and value of a
        property simultaneously.  Just using resolveBase and resolve results 
        in an 5% regression in ubench, 30% in loop-empty-resolve (which is 
        expected).  1.3% progression in sunspider, 2.1% in ubench, with a 
        21% gain in loop-empty-resolve.  The only outlier is function-missing-args
        which gets a 3% regression that I could never resolve.

        * VM/CodeBlock.cpp:
        (KJS::CodeBlock::dump):
        * VM/CodeGenerator.cpp:
        (KJS::CodeGenerator::emitResolveBaseAndProperty):
        * VM/CodeGenerator.h:
        * VM/Machine.cpp:
        (KJS::resolveBaseAndProperty):
        (KJS::Machine::privateExecute):
        * VM/Opcode.h:
        * kjs/nodes.cpp:
        (KJS::PostIncResolveNode::emitCode):
        (KJS::PostDecResolveNode::emitCode):
        (KJS::PreIncResolveNode::emitCode):
        (KJS::PreDecResolveNode::emitCode):
        (KJS::ReadModifyResolveNode::emitCode):

2008-04-15  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Oliver.
        
        - fixed "SquirrelFish crashes due to bad scope chain on some SunSpider tests"
        https://bugs.webkit.org/show_bug.cgi?id=18508

        3d-raytrace and string-unpack-code now run.
        
        The basic approach is to pass around ScopeChainNode* instead of
        ScopeChain*, which in addition to not becoming suddenly an invalid
        pointer also saves an indirection.
        
        This is an 0.4% speedup on SunSpider --squirrelfish (1.8% on --ubench)
        
        * VM/Machine.cpp:
        (KJS::resolve):
        (KJS::resolveBase):